yamls/ecom-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-ui-service
  labels:
    app: ecom-ui
    service: ecom-ui
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9080
  selector:
    app: ecom-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-ui-v1
  labels:
    app: ecom-ui
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-ui
      version: v1
  template:
    metadata:
      labels:
        app: ecom-ui
        version: v1
    spec:
      serviceAccountName: ecom-ui-sa
      containers:
      - name: ecom-ui
        image: abhilash81/ecom-ui:1.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-ui-v2
  labels:
    app: ecom-ui
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-ui
      version: v2
  template:
    metadata:
      labels:
        app: ecom-ui
        version: v2
    spec:
      serviceAccountName: ecom-ui-sa
      containers:
      - name: ecom-ui
        image: abhilash81/ecom-ui:1.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
