yamls/pricer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricer-service
  labels:
    app: pricer-api
    service: pricer-api
spec:
  ports:
  - name: http
    port: 9004
    targetPort: 9080
  selector:
    app: pricer-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricer-api
  labels:
    app: pricer-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricer-api
      version: v1
  template:
    metadata:
      labels:
        app: pricer-api
        version: v1
    spec:
      serviceAccountName: pricer-sa
      containers:
      - name: pricer-api
        image: abhilash81/pricer-api:1.0
        imagePullPolicy: Always        
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
