yamls/product-details-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-api
    service: product-api
spec:
  ports:
  - name: http
    port: 9001
    targetPort: 9080
  selector:
    app: product-api
    #no need to mention the version here for traffic management in istio. version will be specified in VirtualService as subset
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-v1
  labels:
    app: product-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
      version: v1
  template:
    metadata:
      labels:
        app: product-api
        version: v1
    spec:
      serviceAccountName: product-api-sa
      containers:
      - name: product-details-api
        image: abhilash81/product-details-api:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-v2
  labels:
    app: product-api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
      version: v2
  template:
    metadata:
      labels:
        app: product-api
        version: v2
    spec:
      serviceAccountName: product-api-sa
      containers:
      - name: product-details-api
        image: abhilash81/product-details-api:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
