yamls/seller.yaml
apiVersion: v1
kind: Service
metadata:
  name: seller-service
  labels:
    app: seller-api
    service: seller-api
spec:
  ports:
  - name: http
    port: 9002
    targetPort: 9080
  selector:
    app: seller-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seller-api
  labels:
    app: seller-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seller-api
      version: v1
  template:
    metadata:
      labels:
        app: seller-api
        version: v1
    spec:
      serviceAccountName: seller-sa
      containers:
      - name: seller-api
        image: abhilash81/seller-api:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
