yamls/stock.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  labels:
    app: stock-api
    service: stock-api
spec:
  ports:
  - name: http
    port: 9003
    targetPort: 9080
  selector:
    app: stock-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api-v1
  labels:
    app: stock-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-api
      version: v1
  template:
    metadata:
      labels:
        app: stock-api
        version: v1
    spec:
      serviceAccountName: stock-sa
      containers:
      - name: stock-api
        image: abhilash81/stock-api:1.0
        imagePullPolicy: Always        
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api-v2
  labels:
    app: stock-api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-api
      version: v2
  template:
    metadata:
      labels:
        app: stock-api
        version: v2
    spec:
      serviceAccountName: stock-sa
      containers:
      - name: stock-api
        image: abhilash81/stock-api:1.0
        imagePullPolicy: Always        
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
